--- a/_posts/2019-04-22-常用IPTV链接.md
+++ b/_posts/2019-04-22-常用IPTV链接.md
@@ -10,7 +10,7 @@ tags: IPTV
 * content
 {:toc}
 
-<div class="postImg" style="background-image:url(http://carforeasy.cn/IPTV链接-993a4e41)"></div>
+<div class="postImg" style="background-image:url(http://carforeasy.cn/IPTV链接-993a4e41.png)"></div>
 > “本文收集常用的一些电视直播网站及电视直播源发布网站，后续将不定期进行更新。”
 
 
